--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
             aria-label="Generated Password"
           ></textarea>
         </div>
+        <!--settings for password-->
+        <div id="settings">
+          <label for="length">Length</label>
+          <input type="number" id="length" value="16" min="8" max="128"/>
+          <label for="number">Include Numbers</label>
+          <input type="checkbox" id="numbers" checked />
+          <label for="symbols">Include Symbols</label>
+          <input type="checkbox" id="symbols" checked />
+        </div>
         <div class="card-footer">
           <button id="generate" class="btn">Generate Password</button>
         </div>
