--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
         <div id="settings">
           <label for="length">Length</label>
           <input type="number" id="length" value="16" min="8" max="128"/>
+          <label for="lowerCase">Include Lower Case Letter</label>
+          <input type="checkbox" id="lowerCase" checked />
+          <label for="upperCase">Include Upper Case Letters</label>
+          <input type="checkbox" id="upperCase" checked />
           <label for="number">Include Numbers</label>
           <input type="checkbox" id="numbers" checked />
           <label for="symbols">Include Symbols</label>
